--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -64,7 +64,7 @@
 
 \begin{description}
 %  \item[$\Gamma$] Unused.
-  \item[$\accumulate$] The accumulation functions (see section \ref{sec:accumulationexecution}): 
+  \item[$\accumulate$] The accumulation functions (see section \ref{sec:accumulationexecution}):
   \begin{description}
     \item[$\accone$] The single-step accumulation function. See equation \ref{eq:accone}.
     \item[$\accpar$] The parallel accumulation function. See equation \ref{eq:accpar}.
@@ -85,7 +85,6 @@
     \item[$\Psi_I$] The Is-Authorized \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
     \item[$\Psi_M$] The marshalling whole-program \textsc{pvm} machine state-transition function. See appendix \ref{sec:virtualmachine}.
     \item[$\Psi_R$] The Refine \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
-    \item[$\Psi_T$] The On-Transfer \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
   \end{description}
   \item[$\Omega$] Virtual machine host-call functions. See appendix \ref{sec:virtualmachineinvocations}.
   \begin{description}
@@ -130,15 +129,15 @@
   \item[$\fnfyshuffle(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
   \item[$\blake{\dots}$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
   \item[$\keccak{\dots}$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
- 
- 
+
+
   \item[$\fnmerklejustsubpath{x}$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
   \item[$\keys{\dots}$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
   \item[$\fnmerklesubtreepage{x}$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
   \item[$\merklizecd{\dots}$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizewb{\dots}$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizestate{\dots}$] The state Merklization function. See appendix \ref{sec:statemerklization}.
- 
+
   \item[$\getringroot{\dots}$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\zeropad{n}{\dots}$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
   \item[$\seqfromhash{}{\dots}$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
@@ -171,7 +170,6 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\justbecameavailable$] The sequence of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
   \item[$\isticketed$] The ticketed condition, true if the block was sealed with a ticket signature rather than a fallback. See equations \ref{eq:ticketconditiontrue} and \ref{eq:ticketconditionfalse}.
   \item[$\isaudited$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
-  \item[$\deferredtransfersstatistics$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.
 \end{description}
 
 Without any superscript, the block is assumed to the block being imported or, if no block is being imported, the head of the best chain (see section \ref{sec:bestchain}). Explicit block-contextualizing superscripts include:
@@ -199,8 +197,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \end{description}
   \item[$\accountspre$] The (prior) state of the service accounts. See equation \ref{eq:serviceaccounts}.
   \begin{description}
-    \item[$\accountspostacc$] The post-accumulation, pre-transfer intermediate state. See equation \ref{eq:accountspostaccdef}.
-    \item[$\accountspostxfer$] The post-transfer, pre-preimage integration intermediate state. See equation \ref{eq:accountspostxferdef}.
+    \item[$\accountspostacc$] The post-accumulation, pre-preimage integration intermediate state. See equation \ref{eq:accountspostaccdef}.
   \end{description}
   \item[$\entropy$] The entropy accumulator and epochal randomness. See equation \ref{eq:entropycomposition}.
   \item[$\stagingset$] The validator keys and metadata to be drawn from next. See equation \ref{eq:validatorkeys}.
