Missing argument to \accseq

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -342,7 +342,7 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
   \label{eq:finalstateaccumulation}
   &\tup{
     \local¬numberofitemsaccumulated, \psX', \lastaccout', \local¬servicegasused
-  } \equiv \accseq(g, \justbecameavailable^*, \psX, \alwaysaccers) \\
+  } \equiv \accseq(g, \sq{}, \justbecameavailable^*, \psX, \alwaysaccers) \\
   \label{eq:accountspostaccdef}
   &\tup{
     \is\ps¬accounts{\accountspostacc},
