\accseq doesn't return deferred transfers any more

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -153,7 +153,7 @@ We define the outer accumulation function $\accseq$ which transforms a gas-limit
   \accseq\colon\abracegroup{
     &\tuple{\gas, \defxfers, \workreports, \partialstate, \dictionary{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \local¬fnservouts, \local¬fngasused} \\
     &\tup{g, \mathbf{t}, \mathbf{r}, \psX, \mathbf{f}} \!\mapsto\! \begin{cases}
-      \tup{0, \psX, \sq{}, \emset, \sq{}} &
+      \tup{0, \psX, \emset, \sq{}} &
         \when n = 0 \\
       \tup{i + j, \psX', \mathbf{b}^* \!\cup \mathbf{b}, \mathbf{u}^* \!\!\concat \mathbf{u}}\!\!\!\! &
         \text{o/w}\!\!\!\!\!\!\!\! \\
