Drop bogus braces

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -233,11 +233,11 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
         \local¬authqueue'\sub{c} &= ((
           \local¬acc(\ps¬assigners\sub{c})_\ao¬poststate
         )_\ps¬authqueue)\sub{c} \\
-      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}( \set{
-          (\local¬acc(s)_\ao¬poststate)_\ps¬accounts
-            \setminus
-          \keys{\ps¬accounts \setminus \set{s}}
-        } ) \\
+      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(
+        (\local¬acc(s)_\ao¬poststate)_\ps¬accounts
+          \setminus
+        \keys{\ps¬accounts \setminus \set{s}}
+      ) \\
       \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(
         \keys{\ps¬accounts}
           \setminus
