Preimage provision set contains blobs not hashes

--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -248,7 +248,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
 \end{equation}
 \undef{\local¬acc}
 
-And $\local¬fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
+And $\local¬fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/blob pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
   \local¬fnprovide\colon\abracegroup{
     &\tuple{\dictionary{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}} \to \dictionary{\serviceid}{\serviceaccount} \\
