--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -287,8 +287,8 @@ A block $\block$ is serialized as a tuple of its elements in regular order, as i
   }
   \\
   \encode{\aiX \in \accinput} &\equiv \begin{cases}
-      \encode{0, o} &\when \aiX \in \operandtuple \\
-      \encode{1, o} &\when \aiX \in \accinput \\
+      \encode{0, \aiX} &\when \aiX \in \operandtuple \\
+      \encode{1, \aiX} &\when \aiX \in \defxfer \\
   \end{cases}
   \\
   \encoderesult{o \in \workerror \cup \blob} &\equiv \begin{cases}
