--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -137,6 +137,7 @@ We track both regular and exceptional dimensions within our context mutator, but
 
 We define $\Psi_A$, the Accumulation invocation function as:
 \newcommand*{\local¬basestate}{\ao¬poststate}
+\newcommand*{\local¬postxferstate}{\mathbf{s}}
 \begin{align}
   \label{eq:accinvocation}
   \Psi_A& \colon\abracegroup{
@@ -145,18 +146,25 @@ We define $\Psi_A$, the Accumulation invocation function as:
     }
     &\to \acconeout
     \\
-    \tup{\local¬basestate, t, s, g, \mathbf{o}} &\mapsto \begin{cases}
+    \tup{\local¬basestate, t, s, g, \mathbf{i}} &\mapsto \begin{cases}
       \tup{
-        \ao¬poststate,
+        \is{\ao¬poststate}{\local¬postxferstate},
         \is{\ao¬defxfers}{\sq{}},
         \is{\ao¬yield}{\none},
         \is{\ao¬gasused}{0},
         \is{\ao¬provisions}{\sq{}}
       }
         &\when \mathbf{c} = \none \vee \len{\mathbf{c}} > \Cmaxservicecodesize \\
-      C(\Psi_M(\mathbf{c}, 5, g, \encode{t, s, \len{\mathbf{o}}}, F, I(\local¬basestate, s)^2))
+      C(\Psi_M(\mathbf{c}, 5, g, \encode{t, s, \len{\mathbf{i}}}, F, I(\local¬postxferstate, s)^2))
         &\otherwise \\
-      \where \mathbf{c} = \local¬basestate_\ps¬accounts\subb{s}_\sa¬code&
+      \begin{aligned}
+        &\quad\where \mathbf{c} = \local¬basestate_\ps¬accounts\subb{s}_\sa¬code\\
+        &\quad\also \local¬postxferstate = \local¬basestate \exc \local¬postxferstate_\ps¬accounts\subb{s}_\sa¬balance = \local¬basestate_\ps¬accounts\subb{s}_\sa¬balance + \sum_{r \in \mathbf{x}}r_\dx¬amount\\
+        &\quad\also \mathbf{x} = \sq{\build{i}{
+          i \orderedin \mathbf{i} ,
+          i \in \defxfer
+        }}
+      \end{aligned}\\
     \end{cases} \\
   }\\
   I&\colon\abracegroup{
