--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -211,7 +211,7 @@ Where:
     \tup{r, u, \sq{\segment_0, \segment_0, \dots}\interval{}{\local¬theitem_\wi¬exportcount}} &\otherwhen r \not\in \blob \\
     \tup{r, u, \mathbf{e}} &\otherwise \\
     \multicolumn{2}{l}{\where \tup{r, \mathbf{e}, u} = \Psi_R(
-      j, \wpX, \mathbf{o}, \sq{\build{\importsegmentdata(w)}{w \orderedin \wpX_\wp¬workitems}}, \ell
+      c, j, \wpX, \mathbf{o}, \importsegmentdata^\#(\wpX_\wp¬workitems), \ell
     )}\\
     \multicolumn{2}{l}{\also h = \blake{\wpX}\,,\; \local¬theitem = \wpX_\wp¬workitems\subb{j}\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems\subb{k}_\wi¬exportcount}\\
     \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, \tup{r \in \blob, \dots} = I(\wpX, k)} \len{r}}
